<resources>
    <string name="app_name">Cofre senha</string>
    <string name="btn_local">Local</string>
    <string name="btn_google_driver">Google Driver</string>
    <string name="info_cofre">cofre</string>
    <string name="info_abrir_reposit">Abrir repositório</string>
    <string name="info_password">Senha</string>
    <string name="btn_open">Abrir</string>
    <string name="info_reposit">Repositório:</string>
    <string name="info_relembar_password">Relembar senha</string>
    <string name="info_books">Cadernos</string>
    <string name="info_book">Caderno</string>
    <string name="menu_logout">logout</string>
    <string name="info_title_password">Titulo da senha</string>
    <string name="info_description">Descrição</string>
    <string name="info_name">Nome</string>
    <string name="info_email">Email</string>
    <string name="btn_new_reposit">Criar Repositório</string>
    <string name="btn_save">Salvar</string>
    <string name="campNull">Este campo é obrigatório</string>
    <string name="name_book">Nome do caderno</string>
    <string name="save">salvar</string>
    <string name="cancel">cancelar</string>
    <string name="email_valid">Email invalido</string>
</resources>
