<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.MainActivity">


        <ImageView
            android:id="@+id/image_cofre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info_cofre"
            android:layout_margin="100dp"
            android:src="@drawable/ic_cofre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_abrir_reposit"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_cofre" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_open"
            style="@style/CustomTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:drawableStart="@drawable/ic_folder_local"
            android:drawableLeft="@drawable/ic_folder_local"
            android:text="@string/btn_open"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_repository" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_new_repository"
            style="@style/CustomTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_add_note"
            android:drawableLeft="@drawable/ic_add_note"
            android:paddingHorizontal="20dp"
            android:text="@string/btn_new_reposit"
            app:layout_constraintTop_toBottomOf="@+id/button_open" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>