<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jlmcdeveloper.cofresenha.ui.splash.SplashViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.splash.SplashActivity"
        android:background="@drawable/background_layout">


        <ImageView
            android:id="@+id/image_cofre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info_cofre"
            android:layout_margin="80dp"
            android:src="@drawable/ic_cofre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_abrir_reposit"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_cofre" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_local"
            style="@style/CustomTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="60dp"
            android:drawableStart="@drawable/ic_folder_local"
            android:drawableLeft="@drawable/ic_folder_local"
            android:text="@string/btn_local"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_repository" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_driver"
            style="@style/CustomTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_google_drive"
            android:drawableLeft="@drawable/ic_google_drive"
            android:paddingHorizontal="20dp"
            android:text="@string/btn_google_driver"
            app:layout_constraintTop_toBottomOf="@+id/button_local"
            tools:layout_editor_absoluteX="50dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>