<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="viewModel"
        type="com.jlmcdeveloper.cofresenha.ui.repository.create.CreateRepositoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_layout">

        <TextView
            android:id="@+id/textView_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_reposit"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_uri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.uri}"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:errorText="@{viewModel.passwordError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info_password"
                android:inputType="textPassword"
                android:text="@={viewModel.editPassword}"
                android:textColor="@color/colorWhite" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_open_reposi"
            style="@style/CustomTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:drawableStart="@drawable/ic_save"
            android:drawableLeft="@drawable/ic_save"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/btn_save"
            android:onClick="@{() -> viewModel.savePassword() }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>